syntax = "proto3";

package svlog;

message HealthReq {
	string clientName = 1;
}

message HealthResp {
	int32 code = 1;
	string serverName = 2;
	int64 version = 3;
	string message = 4;
}

message WriteLogReq {
	int32 level = 1;
	int64 logID = 2;
	string msg = 3;
}

message WriteLogResp {
	int32 code = 1;
	string  message = 2;
}

service SvLogService {
	rpc Health(HealthReq) returns (HealthResp);
	rpc WriteLog(WriteLogReq) returns (WriteLogResp);
}